# investing-dashboard

./: .gitignore  README.md
investing-dashboard-backend/: pyproject.toml
investing-dashboard-backend/investing_dashboard_backend/: app.py  routing.py  schema.py
investing-dashboard-backend/tests/: test_investing_dashboard_backend.py
